Fix constructor javadocs being saved to their class